MH-3986 backed out changes to start_matterhorn.sh
git-svn-id: https://opencast.jira.com/svn/MH/trunk@7290 e6edf6fb-f266-4316-afb4-e53d95876a76